ve 13:11  état du projet

--- a/css/style.css
+++ b/css/style.css
@@ -2,3 +2,23 @@
 {
     display: flex;
 }
+
+#country{
+    
+}
+
+#user_answer{
+    
+}
+
+#submit{
+    
+}
+
+.resultat{
+    
+}
+
+.button{
+    
+}
